--- a/css/_partials/responsive.css
+++ b/css/_partials/responsive.css
@@ -61,6 +61,7 @@
         align-items: center;
         justify-content: center;
         margin-left: 10px;
+        flex-shrink: 0;
     }
 
     .notification-svg svg{
